--- a/hole-punching/libp2p/protocols/connectivity/relay/relay.html
+++ b/hole-punching/libp2p/protocols/connectivity/relay/relay.html
@@ -257,6 +257,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="handleHopStreamV2(r: Relay; conn: Connection): Future[void]">handleHopStreamV2(r: Relay; conn: Connection): Future[void]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">isRelayed
+      <li><a class="reference" href="#isRelayed%2CConnection"
+    title="isRelayed(conn: Connection): bool">isRelayed(conn: Connection): bool</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">new
       <li><a class="reference" href="#new%2Ctypedesc%5BRelay%5D%2Cuint32%2Cuint64%2Cuint32%2Cint%2Cint%2Cint%2Cbool"
     title="new(T: typedesc[Relay]; reservationTTL: times.Duration = DefaultReservationTTL;
@@ -450,7 +455,7 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="handleHop,Relay,Connection,RelayMessage" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#handleHop%2CRelay%2CConnection%2CRelayMessage"><span class="Identifier">handleHop</span></a><span class="Other">(</span><span class="Identifier">r</span><span class="Other">:</span> <a href="relay.html#Relay"><span class="Identifier">Relay</span></a><span class="Other">;</span> <span class="Identifier">connSrc</span><span class="Other">:</span> <a href="../../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span> <span class="Identifier">msg</span><span class="Other">:</span> <a href="messages.html#RelayMessage"><span class="Identifier">RelayMessage</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -464,7 +469,8 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="handleHopStreamV2,Relay,Connection" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#handleHopStreamV2%2CRelay%2CConnection"><span class="Identifier">handleHopStreamV2</span></a><span class="Other">(</span><span class="Identifier">r</span><span class="Other">:</span> <a href="relay.html#Relay"><span class="Identifier">Relay</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
-    </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -472,6 +478,18 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/protocols/connectivity/relay/relay.nim#L208"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/relay/relay.nim#L208" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="isRelayed,Connection" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#isRelayed%2CConnection"><span class="Identifier">isRelayed</span></a><span class="Other">(</span><span class="Identifier">conn</span><span class="Other">:</span> <a href="../../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/protocols/connectivity/relay/relay.nim#L104"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/relay/relay.nim#L104" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -514,7 +532,8 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="start.e,Relay" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#start.e%2CRelay"><span class="Identifier">start</span></a><span class="Other">(</span><span class="Identifier">r</span><span class="Other">:</span> <a href="relay.html#Relay"><span class="Identifier">Relay</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-                                       <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+                                       <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+                                       <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -527,7 +546,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="stop.e,Relay" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#stop.e%2CRelay"><span class="Identifier">stop</span></a><span class="Other">(</span><span class="Identifier">r</span><span class="Other">:</span> <a href="relay.html#Relay"><span class="Identifier">Relay</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-                                      <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+                                      <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -548,7 +567,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-25 16:03:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-27 12:43:50 UTC</small>
       </div>
     </div>
   </div>
