--- a/unstable/libp2p/transports/tcptransport.html
+++ b/unstable/libp2p/transports/tcptransport.html
@@ -253,10 +253,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">dial
-      <li><a class="reference" href="#dial.e%2CTcpTransport%2Cstring%2CMultiAddress"
-    title="dial(self: TcpTransport; hostname: string; address: MultiAddress): Future[
-    Connection]">dial(self: TcpTransport; hostname: string; address: MultiAddress): Future[
-    Connection]</a></li>
+      <li><a class="reference" href="#dial.e%2CTcpTransport%2Cstring%2CMultiAddress%2COpt%5BPeerId%5D"
+    title="dial(self: TcpTransport; hostname: string; address: MultiAddress;
+     peerId: Opt[PeerId] = Opt.none(PeerId)): Future[Connection]">dial(self: TcpTransport; hostname: string; address: MultiAddress;
+     peerId: Opt[PeerId] = Opt.none(PeerId)): Future[Connection]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">handles
@@ -404,17 +404,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="dial.e,TcpTransport,string,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#dial.e%2CTcpTransport%2Cstring%2CMultiAddress"><span class="Identifier">dial</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="tcptransport.html#TcpTransport"><span class="Identifier">TcpTransport</span></a><span class="Other">;</span> <span class="Identifier">hostname</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">address</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
-    <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-                  <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="dial.e,TcpTransport,string,MultiAddress,Opt[PeerId]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#dial.e%2CTcpTransport%2Cstring%2CMultiAddress%2COpt%5BPeerId%5D"><span class="Identifier">dial</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="tcptransport.html#TcpTransport"><span class="Identifier">TcpTransport</span></a><span class="Other">;</span> <span class="Identifier">hostname</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">address</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">;</span>
+            <span class="Identifier">peerId</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span> <span class="Other">=</span> <span class="Identifier">Opt</span><span class="Other">.</span><span class="Identifier">none</span><span class="Other">(</span><span class="Identifier">PeerId</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 dial a peer 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/tcptransport.nim#L249"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/tcptransport.nim#L250"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/tcptransport.nim#L249" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/tcptransport.nim#L250" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -425,9 +426,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/tcptransport.nim#L263"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/tcptransport.nim#L264"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/tcptransport.nim#L263" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/tcptransport.nim#L264" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -462,7 +463,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../upgrademngrs/upgrade.html#TransportInvalidAddrError"><span class="Identifier">TransportInvalidAddrError</span></a>, <a href="../upgrademngrs/upgrade.html#dial,Transport,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a>, <a href="../upgrademngrs/upgrade.html#newTransportClosedError,ref.Exception"><span class="Identifier">newTransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeOutgoing.e,Transport,Connection,Opt[PeerId]"><span class="Identifier">upgradeOutgoing</span></a>, <a href="../upgrademngrs/upgrade.html#stop.e,Transport"><span class="Identifier">stop</span></a>, <a href="../upgrademngrs/upgrade.html#accept.e,Transport"><span class="Identifier">accept</span></a>, <a href="../upgrademngrs/upgrade.html#TransportError"><span class="Identifier">TransportError</span></a>, <a href="../upgrademngrs/upgrade.html#TransportClosedError"><span class="Identifier">TransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#handles.e,Transport,MultiAddress"><span class="Identifier">handles</span></a>, <a href="../upgrademngrs/upgrade.html#dial.e,Transport,string,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeIncoming.e,Transport,Connection"><span class="Identifier">upgradeIncoming</span></a>, <a href="../upgrademngrs/upgrade.html#start.e,Transport,seq[MultiAddress]"><span class="Identifier">start</span></a>
+<a href="../upgrademngrs/upgrade.html#TransportInvalidAddrError"><span class="Identifier">TransportInvalidAddrError</span></a>, <a href="../upgrademngrs/upgrade.html#dial,Transport,MultiAddress,Opt[PeerId]"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a>, <a href="../upgrademngrs/upgrade.html#newTransportClosedError,ref.Exception"><span class="Identifier">newTransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeOutgoing.e,Transport,Connection,Opt[PeerId]"><span class="Identifier">upgradeOutgoing</span></a>, <a href="../upgrademngrs/upgrade.html#stop.e,Transport"><span class="Identifier">stop</span></a>, <a href="../upgrademngrs/upgrade.html#accept.e,Transport"><span class="Identifier">accept</span></a>, <a href="../upgrademngrs/upgrade.html#TransportError"><span class="Identifier">TransportError</span></a>, <a href="../upgrademngrs/upgrade.html#TransportClosedError"><span class="Identifier">TransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#handles.e,Transport,MultiAddress"><span class="Identifier">handles</span></a>, <a href="../upgrademngrs/upgrade.html#dial.e,Transport,string,MultiAddress,Opt[PeerId]"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeIncoming.e,Transport,Connection"><span class="Identifier">upgradeIncoming</span></a>, <a href="../upgrademngrs/upgrade.html#start.e,Transport,seq[MultiAddress]"><span class="Identifier">start</span></a>
 </dl></div>
 
   </div>
@@ -472,7 +473,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-25 10:21:30 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-31 11:48:16 UTC</small>
       </div>
     </div>
   </div>
