--- a/unstable/libp2p/transports/wstransport.html
+++ b/unstable/libp2p/transports/wstransport.html
@@ -383,9 +383,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a clear-text WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L343"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L344"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L343" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L344" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -399,9 +399,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a secure WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L321"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L322"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L321" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L322" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -467,9 +467,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L316"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L317"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L316" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L317" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -542,7 +542,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../upgrademngrs/upgrade.html#TransportInvalidAddrError"><span class="Identifier">TransportInvalidAddrError</span></a>, <a href="../upgrademngrs/upgrade.html#dial,Transport,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a>, <a href="../upgrademngrs/upgrade.html#newTransportClosedError,ref.Exception"><span class="Identifier">newTransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeOutgoing.e,Transport,Connection,Opt[PeerId]"><span class="Identifier">upgradeOutgoing</span></a>, <a href="../upgrademngrs/upgrade.html#stop.e,Transport"><span class="Identifier">stop</span></a>, <a href="../upgrademngrs/upgrade.html#accept.e,Transport"><span class="Identifier">accept</span></a>, <a href="../upgrademngrs/upgrade.html#TransportError"><span class="Identifier">TransportError</span></a>, <a href="../upgrademngrs/upgrade.html#TransportClosedError"><span class="Identifier">TransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#handles.e,Transport,MultiAddress"><span class="Identifier">handles</span></a>, <a href="../upgrademngrs/upgrade.html#dial.e,Transport,string,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeIncoming.e,Transport,Connection"><span class="Identifier">upgradeIncoming</span></a>, <a href="../upgrademngrs/upgrade.html#start.e,Transport,seq[MultiAddress]"><span class="Identifier">start</span></a>
+<a href="../upgrademngrs/upgrade.html#TransportInvalidAddrError"><span class="Identifier">TransportInvalidAddrError</span></a>, <a href="../upgrademngrs/upgrade.html#dial,Transport,MultiAddress,Opt[PeerId]"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a>, <a href="../upgrademngrs/upgrade.html#newTransportClosedError,ref.Exception"><span class="Identifier">newTransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeOutgoing.e,Transport,Connection,Opt[PeerId]"><span class="Identifier">upgradeOutgoing</span></a>, <a href="../upgrademngrs/upgrade.html#stop.e,Transport"><span class="Identifier">stop</span></a>, <a href="../upgrademngrs/upgrade.html#accept.e,Transport"><span class="Identifier">accept</span></a>, <a href="../upgrademngrs/upgrade.html#TransportError"><span class="Identifier">TransportError</span></a>, <a href="../upgrademngrs/upgrade.html#TransportClosedError"><span class="Identifier">TransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#handles.e,Transport,MultiAddress"><span class="Identifier">handles</span></a>, <a href="../upgrademngrs/upgrade.html#dial.e,Transport,string,MultiAddress,Opt[PeerId]"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeIncoming.e,Transport,Connection"><span class="Identifier">upgradeIncoming</span></a>, <a href="../upgrademngrs/upgrade.html#start.e,Transport,seq[MultiAddress]"><span class="Identifier">start</span></a>
 </dl></div>
 
   </div>
@@ -552,7 +552,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-25 10:21:32 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-31 11:48:18 UTC</small>
       </div>
     </div>
   </div>
